--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Bienvenidos a nuestra Pagina!</div>
-          <div class="intro-heading text-uppercase">Un encuentro con tus necesidades</div>
+          <div class="intro-heading text-uppercase">MyZhamat Sistemas</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Dime mas</a>
         </div>
       </div>
@@ -73,8 +73,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Services</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Servicios</h2>
+            <h3 class="section-subheading text-muted">Cuentenos sus proyectos, nosotros los sistematizamos.</h3>
           </div>
         </div>
         <div class="row text-center">
