--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Zhamat Sistemas</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -62,8 +62,8 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Bienvenidos a nuestra Pagina!</div>
-          <div class="intro-heading text-uppercase">MyZhamat Sistemas</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Dime mas</a>
+          <div class="intro-heading text-uppercase">Zhamat Sistemas</div>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mas</a>
         </div>
       </div>
     </header>
@@ -74,7 +74,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Servicios</h2>
-            <h3 class="section-subheading text-muted">Zhamat Sistemas.</h3>
+            <h3 class="section-subheading text-muted">A su medida</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -84,23 +84,24 @@
               <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Comercio-E</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Puede iniciar comercio electronico mediante una pagina Web ajustada a su medida que el garantiza que el mundo entero va a empezar a reconocerlo 
+            va a empezar a reconocerle</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Diseño Ajustable</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Software a su Medida</h4>
+            <p class="text-muted">Que tipo de software necesita? lo hacemos a la medida exacta de sus necesidades </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Securidad Web</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Mantenimiento de Computadores</h4>
+            <p class="text-muted">Mantenimiento correctivo y preventivo para que nunca se vare</p>
           </div>
         </div>
       </div>
@@ -210,7 +211,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Acerca</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Conozca quienes somos y porque debe usar nuestros servicios</h3>
           </div>
         </div>
         <div class="row">
