--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Zhamat Sistemas</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Bienvenidos a nuestra Pagina!</div>
-          <div class="intro-heading text-uppercase">Zhamat Sistemas</div>
+          <div class="intro-heading text-uppercase">Como le podemos servir</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mas</a>
         </div>
       </div>
@@ -84,8 +84,7 @@
               <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Comercio-E</h4>
-            <p class="text-muted">Puede iniciar comercio electronico mediante una pagina Web ajustada a su medida que el garantiza que el mundo entero va a empezar a reconocerlo 
-            va a empezar a reconocerle</p>
+            <p class="text-muted">Puede iniciar comercio electronico mediante una pagina Web que garantiza que el mundo entero va a reconocerlo</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
