--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 
     <!-- Header -->
-    <!--header class="masthead">
+    <header class="masthead">
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Bienvenidos a nuestra Pagina!</div>
