--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Bienvenidos a nuestra Pagina!</div>
-          <div class="intro-heading text-uppercase">Como le podemos servir</div>
+          <div class="intro-lead-in">Como le podemos servir?</div>
+          <div class="intro-heading text-uppercase">Zhamat Sistemas</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mas</a>
         </div>
       </div>
