--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
               <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Legalización</h4>
-              <p class="text-muted">Reconocer su Empresa</p>
+              <h4>Tramites</h4>
+              <p class="text-muted">Registrar su negocio </p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
