--- a/index.html
+++ b/index.html
@@ -510,9 +510,10 @@
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                   <p>Realizamos tramites ante la Dian, Bomberos, Cámara de Comercio, etc., para que su Negocio tenga los beneficios al que tiene derecho cuando está legalizado  !</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Threads</li>
-                    <li>Category: Illustration</li>
+                    <li>Rapido</li>
+                    <li>Honesto</li>        
+                    <li>Económico</li>
+                    <li>Categoria: Trámites</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
