--- a/index.html
+++ b/index.html
@@ -505,8 +505,8 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2 class="text-uppercase">Tramites Administrativos</h2>
+                  <p class="item-intro text-muted">Legalizamos su Negocio ante los entes administrativos</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                   <p>Realizamos tramites ante la Dian, Bomberos, Cámara de Comercio, etc., para que su Negocio tenga los beneficios al que tiene derecho cuando está legalizado  !</p>
                   <ul class="list-inline">
