--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Portafolio</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Toda una logística para atender su Negocio o Empresa.</h3>
           </div>
         </div>
         <div class="row">
