--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
               <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Explore</h4>
-              <p class="text-muted">Diseño Grafico</p>
+              <h4>Software</h4>
+              <p class="text-muted">A su medida</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
