--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
               <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Finish</h4>
-              <p class="text-muted">Identity</p>
+              <h4>Páginas Web</h4>
+              <p class="text-muted">Visibilidad</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
