--- a/index.html
+++ b/index.html
@@ -574,10 +574,10 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2 class="text-uppercase">Páginas Web</h2>
+                  <p class="item-intro text-muted">Para que el mundo lo vea.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>La mejor ventana que ofrece hoy en dia su Empresa o Negocio es crear una página Web, donde muestre las ventajas y servicios. es apartir de este momento donde se convierte en un Negocio, Empresa o Proyecto a nivel global, atrayendo muchos más clientes!</p>
                   <ul class="list-inline">
                     <li>Date: January 2017</li>
                     <li>Client: Finish</li>
