--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Paginas Web</h4>
-            <p class="text-muted">Para que su Empresa, Negoio o Proyecto sea Reconocido e Nivel Mundial</p>
+            <h4 class="service-heading">Trámites Administrativos </h4>
+            <p class="text-muted">Asesoramos cualquiera que sea su necesidad ante los entes administrativos</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
