--- a/index.html
+++ b/index.html
@@ -61,9 +61,19 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
+          <!--INICIO IMAGEN   CAMBIANDO CABECERA-->
+              <script language="JavaScript1.1">
+              var specifyimage=new Array() //Your images
+              specifyimage[0]="img/portfolio/02-thumbnail.jpg"
+              specifyimage[1]="img/portfolio/02-thumbnail.jpg"
+              specifyimage[2]="img/portfolio/02-thumbnail.jpg"
+              specifyimage[3]="img/portfolio/02-thumbnail.jpg"
+              specifyimage[4]="img/portfolio/02-thumbnail.jpg"
+              var delay=5000 //5 SEGUNDOS
           <div class="intro-lead-in">Como le podemos servir?</div>
           <div class="intro-heading text-uppercase">Zhamat Sistemas</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mas</a>
+        
         </div>
       </div>
     </header>
