--- a/index.html
+++ b/index.html
@@ -70,6 +70,27 @@
               specifyimage[3]="img/portfolio/02-thumbnail.jpg"
               specifyimage[4]="img/portfolio/02-thumbnail.jpg"
               var delay=5000 //5 SEGUNDOS
+              //Counter for array 
+              var count =1;
+              var cubeimage=new Array()
+              for (j=0;j<specifyimage.length;j++){
+              cubeimage[j]=new Image()
+              cubeimage[j].src=specifyimage[j]
+              }
+              function movecube(){
+              if (window.createPopup)
+              cube.filters[0].apply()
+              document.images.cube.src=cubeimage[count].src;
+              if (window.createPopup)
+              cube.filters[0].play()
+              count++;
+              if (count==cubeimage.length)
+              count=0;
+              setTimeout("movecube()",delay)
+              }
+              window.onload=new Function("setTimeout('movecube()',delay)")
+              </script><img src="pansaludable.jpg" name="cube" border="0" style="filter:progid:DXImageTransform.Microsoft.Stretch(stretchStyle=&#39;PUSH&#39;)" /> 
+              <!--FIN IMAGEN CAMBIANDO-->
           <div class="intro-lead-in">Como le podemos servir?</div>
           <div class="intro-heading text-uppercase">Zhamat Sistemas</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mas</a>
