--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <!--INICIO IMAGEN   CAMBIANDO CABECERA-->
+           <div>
+             <!--INICIO IMAGEN   CAMBIANDO CABECERA-->
               <script language="JavaScript1.1">
               var specifyimage=new Array() //Your images
               specifyimage[0]="img/portfolio/02-thumbnail.jpg"
@@ -91,6 +92,7 @@
               window.onload=new Function("setTimeout('movecube()',delay)")
               </script><img src="pansaludable.jpg" name="cube" border="0" style="filter:progid:DXImageTransform.Microsoft.Stretch(stretchStyle=&#39;PUSH&#39;)" /> 
               <!--FIN IMAGEN CAMBIANDO-->
+          </div>
           <div class="intro-lead-in">Como le podemos servir?</div>
           <div class="intro-heading text-uppercase">Zhamat Sistemas</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mas</a>
